# sdbus-cpp

./: CMakeLists.txt
include/sdbus-c++/: IProxy.h  Types.h
src/: Connection.cpp  Connection.h  ISdBus.h  Proxy.cpp  SdBus.cpp  SdBus.h
test/: CMakeLists.txt
test/tmp/: CMakeLists.txt  both.cpp  client.cpp  server.cpp
tests/integrationtests/: AdaptorAndProxy_test.cpp  proxy-glue.h
